--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ monitor_speed = 115200
 lib_deps = 
     mathieucarbou/AsyncTCP@^3.2.14
     mathieucarbou/ESPAsyncWebServer@^3.3.23
+    adafruit/Adafruit GFX Library@^1.11.11
+    adafruit/Adafruit SSD1306@^2.5.13
